build(deps): bump xmldom to 0.8.0
Switching from package `xmldom` to `@xmldom/xmldom`, which resolves the security issue present in latest xmldom version 0.6.0:
https://github.com/xmldom/xmldom/security/advisories/GHSA-5fg8-2547-mr8q

The reason is that the maintainers were forced to switch to a scoped package since 0.7.0:
 https://github.com/xmldom/xmldom/issues/271

- I used node 12 to run `npm install`.
- I executed `npm run test` on my machine but some tests complained about missing titanium config in my home directory.
  Since I don't know what that means we will have to see what CI checks complain about.

I'm one of the xmldom maintainers. Don't hesitate to ask me questions.

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/traverse": "^7.4.5",
     "@babel/types": "^7.4.4",
     "@babel/template": "^7.4.4",
+    "@xmldom/xmldom": "^0.8.0",
     "async": "^3.2.0",
     "colors": "^1.1.2",
     "commander": "^8.0.0",
@@ -50,8 +51,7 @@
     "resolve": "^1.1.7",
     "source-map": "^0.7.3",
     "walk-sync": "^0.3.2",
-    "xml2tss": "0.0.5",
-    "xmldom": "^0.6.0"
+    "xml2tss": "0.0.5"
   },
   "license": "Apache-2.0",
   "bin": {
